--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@awesome-cordova-plugins/geolocation": "^6.9.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/barcode-scanner": "^1.0.1",
@@ -31,6 +32,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "cordova-plugin-geolocation": "^5.0.0",
     "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
     "ng-qrcode": "^18.0.0",
