--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@awesome-cordova-plugins/geolocation": "^6.9.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
-    "@capacitor/barcode-scanner": "^1.0.1",
     "@capacitor/core": "6.1.2",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
@@ -33,6 +32,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.7.7",
     "cordova-plugin-geolocation": "^5.0.0",
     "firebase": "^10.14.1",
