--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.7.7",
     "cordova-plugin-geolocation": "^5.0.0",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.7.0",
     "ionicons": "^7.0.0",
     "ng-qrcode": "^18.0.0",
     "rxjs": "~7.8.0",
