--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,7 +16,12 @@ android {
     }
   }
 
-
+  buildFeatures {
+       dataBinding true
+    }
+    dataBinding {
+      enabled = true
+  }
 
   buildTypes {
     release {
@@ -51,6 +56,9 @@ dependencies {
   androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
   androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
   implementation project(':capacitor-cordova-android-plugins')
+
+  implementation 'com.google.mlkit:barcode-scanning:17.0.1'
+
   def camerax_version = "1.5.0-alpha03"
   implementation "androidx.camera:camera-core:${camerax_version}"
   implementation "androidx.camera:camera-camera2:${camerax_version}"
