--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -3,8 +3,8 @@
 	"appName": "Proyecto_semestral",
 	"webDir": "www",
 	"packageClassList": [
+		"BarcodeScannerPlugin",
 		"AppPlugin",
-		"CapacitorBarcodeScannerPlugin",
 		"FilesystemPlugin",
 		"GeolocationPlugin",
 		"HapticsPlugin",
